# Tower

./: .gitignore  README.md  main.py  players.json  pyproject.toml  requirements.txt
.github/workflows/: code_quality.yaml  tests.yaml
config/: color.py  constants.py
design/: enemies.py  enemy_wave.py  grid.py  track.py
effects/: particle.py
enteties/: enemy_base.py  tour_base.py
enteties/enemies/: enemy_big.py  enemy_normal.py  enemy_slow.py  enemy_small.py
enteties/tours/: tour_normal.py  tour_power.py  tour_slow.py  tower_types.py
entities/: enemy_base.py  tour_base.py
entities/enemies/: enemy_big.py  enemy_normal.py  enemy_slow.py  enemy_small.py
entities/tours/: tour_normal.py  tour_power.py  tour_slow.py  tower_types.py
game/: game_manager.py  game_state.py  save_manager.py
src/entities/: tour_base.py
src/entities/enemies/: enemy_big.py  enemy_slow.py
src/entities/tours/: tour_normal.py  tour_power.py  tour_slow.py
src/tower/: main.py
src/tower/config/: constants.py
src/tower/design/: enemy_wave.py  grid.py  track.py
src/tower/effects/: particle.py
src/tower/entities/: enemy_base.py  tour_base.py
src/tower/entities/enemies/: enemy_big.py  enemy_normal.py  (+2 more)
src/tower/game/: game_manager.py  game_state.py  player.py  save_manager.py
src/tower/ui/: game_ui.py  login_menu.py  menu_manager.py
tests/: conftest.py  test_enemy_base.py  test_enemy_wave.py  test_game_manager.py  test_game_state.py  test_game_ui.py  test_grid.py  test_main.py  test_particle.py  test_tour_base.py  test_tower_types.py  test_track.py
ui/: game_ui.py
(+4 files in other folders)
