[project]
name = "tower"
version = "0.1.0"
description = "Tower Project"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "pygame>=2.6.1",
]

[project.scripts]
tower = "tower.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
]
